chore: 테스트 오류 수정 및 사소한 코드 개선
#58